Add simpler build process